--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 	<head>
     <link href="//db.onlinewebfonts.com/c/171c7f23875400dbd2bc92187d8c1330?family=Trirong+Light" rel="stylesheet" type="text/css"/>
-		<title>Data for change</title>
+		<title>Data for Change</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
